--- a/styles/style.css
+++ b/styles/style.css
@@ -371,7 +371,8 @@ img {
   height: 1.375rem;
   align-items: center;
   margin-left: 1.875rem;
-  display: none; }
+  display: none;
+  cursor: pointer; }
   @media screen and (max-width: 768px) {
     .hamburger-menu-link {
       display: inline-flex; } }
@@ -432,6 +433,7 @@ img {
   text-transform: uppercase; }
 
 .hamburger-close {
+  cursor: pointer;
   position: absolute;
   top: 3%;
   right: 5%;
