--- a/scss/header.scss
+++ b/scss/header.scss
@@ -99,14 +99,15 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    top:0;
+    top:-100%;
     left:0;
     background-color:rgba(47,50,52,.99);
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    display: none;
+    transition: 1s;
+    //display: none;
 }
 .hamburger-nav__list{
    font-size: 1.5rem;
@@ -144,8 +145,10 @@
 .hamburger-close{
     cursor:pointer;
     position: absolute;
-    top:3%;
-    right:5%;
+    top:2.2rem;
+    right:.9rem;
+    width: 1.125rem;    
+    height: 1.125rem;       
     cursor: pointer;
     opacity: 1;
     //display: none;
@@ -158,7 +161,7 @@
         border-radius: 0.1875rem;
         transform: rotate(-40deg);
         top: 0.0625rem;
-            left: 0.125rem;
+        left: 0.5rem;
     }
    &:after{
     content:'';
@@ -169,14 +172,16 @@
     border-radius: 0.1875rem;
     transform: rotate(40deg);
     top: 0.0625rem;
-    left: 0.125rem;
+    left: 0.5rem;
 }
 .close-menu{
     display: none;
 }
 }
 .hamburger-menu-visible{
-    display: flex;
+    //display: flex;
+    top:0%;
+    transition: 1s;
 }
 
 // }
