--- a/scss/burger-slider.scss
+++ b/scss/burger-slider.scss
@@ -271,3 +271,23 @@
 .scroll-right{
     transform: rotate(-90deg);
 }
+// .burger-slider__content_list{
+//     display: flex;
+// }
+// .burger-slider__content_item{
+//     display:none;
+//     opacity: 0;
+//     transition: 1s;
+// }
+// .burger-slider__content_item--active{
+//     display:block;
+//     opacity: 1;
+//     transform: 1s;
+// }
+.slider-list{
+    display: flex;
+    overflow: hidden;
+}
+.slider-item{
+    width:940px;
+}
