--- a/scss/burger-slider.scss
+++ b/scss/burger-slider.scss
@@ -93,7 +93,13 @@
 //     }
 // }
 .burger-slider__item{
-    display: flex;
+    display: inline-flex;
+    width:100%;
+    position: relative;
+    height:100%;
+    justify-content: center;
+    max-height: 100%;
+    max-width: 100%;
     @include tablets{
         flex-direction: column;
     }
