--- a/styles/style.css
+++ b/styles/style.css
@@ -908,7 +908,13 @@ img {
       margin: 0; } }
 
 .burger-slider__item {
-  display: flex; }
+  display: inline-flex;
+  width: 100%;
+  position: relative;
+  height: 100%;
+  justify-content: center;
+  max-height: 100%;
+  max-width: 100%; }
   @media screen and (max-width: 768px) {
     .burger-slider__item {
       flex-direction: column; } }
