--- a/scss/burger-slider.scss
+++ b/scss/burger-slider.scss
@@ -69,6 +69,10 @@
    
    
 }
+.burger-slider__wrap{
+    max-width: 100%;
+    overflow: hidden;
+}
 .burger-slider__arrow{
     display: flex;
     align-items: center;
