--- a/styles/style.css
+++ b/styles/style.css
@@ -897,6 +897,10 @@ img {
   align-items: center;
   justify-content: center; }
 
+.burger-slider__wrap {
+  max-width: 100%;
+  overflow: hidden; }
+
 .burger-slider__arrow {
   display: flex;
   align-items: center; }
