--- a/scss/burger-slider.scss
+++ b/scss/burger-slider.scss
@@ -72,6 +72,8 @@
 .burger-slider__wrap{
     max-width: 100%;
     overflow: hidden;
+    display: flex;
+    max-height: 100%;
 }
 .burger-slider__arrow{
     display: flex;
@@ -79,6 +81,8 @@
 }
 .burger-slider__list{
     margin: 0 2.5rem;
+    display: flex;
+    overflow: hidden;
         @include tablets{
             margin: 0;
         }
