--- a/styles/style.css
+++ b/styles/style.css
@@ -898,7 +898,7 @@ img {
   justify-content: center; }
 
 .burger-slider__wrap {
-  max-width: 100%;
+  max-width: 58.75rem;
   overflow: hidden;
   display: flex;
   max-height: 100%; }
@@ -907,22 +907,26 @@ img {
   display: flex;
   align-items: center; }
 
-.burger-slider__list {
-  margin: 0 2.5rem;
+.burger-slider__list-wrap {
   display: flex;
   overflow: hidden; }
+
+.burger-slider__list {
+  display: flex;
+  margin-left: 1.25rem; }
   @media screen and (max-width: 768px) {
     .burger-slider__list {
       margin: 0; } }
 
 .burger-slider__item {
   display: inline-flex;
-  width: 100%;
+  width: 52.5625rem;
   position: relative;
   height: 100%;
   justify-content: center;
   max-height: 100%;
-  max-width: 100%; }
+  max-width: 100%;
+  margin-right: 2.8125rem; }
   @media screen and (max-width: 768px) {
     .burger-slider__item {
       flex-direction: column; } }
@@ -952,7 +956,7 @@ img {
 
 .burger-content__img {
   margin-left: -6.6875rem;
-  max-width: 128%; }
+  max-width: 130%; }
   @media screen and (max-width: 768px) {
     .burger-content__img {
       margin-left: 0;
