--- a/scss/burger-slider.scss
+++ b/scss/burger-slider.scss
@@ -87,6 +87,9 @@
    // margin: 0 2.5rem;
     display: flex;
   //  overflow: hidden;
+  position: relative;
+  will-change: right;
+  transition: right .75s;
   margin-left: 1.25rem;
         @include tablets{
             margin: 0;
@@ -107,15 +110,32 @@
 // }
 .burger-slider__item{
     display: inline-flex;
-    width:52.5625rem;
+    width: calc(100vw - 580px);
     position: relative;
     height:100%;
     justify-content: center;
     max-height: 100%;
     max-width: 100%;
     margin-right: 2.8125rem;
+    &:nth-child(3){
+        .burger-content__img{
+            max-width:110%;
+            margin-left: -6.6875rem;
+            @include tablets{
+                margin-left: 3.313rem;
+            }
+            @include phones{
+                margin-left: 0;
+            }
+        }
+    }
+   
     @include tablets{
         flex-direction: column;
+        width: calc(100vw - 110px);
+    }
+    @include phones{
+        width: calc(100vw - 70px);
     }
    // margin-right: -1.25rem;
 }
@@ -323,4 +343,7 @@
 }
 .slider-item{
     width:940px;
+}
+.arrow{
+    cursor: pointer;
 }
