--- a/styles/style.css
+++ b/styles/style.css
@@ -923,7 +923,7 @@ img {
 
 .burger-slider__item {
   display: inline-flex;
-  width: calc(100vw - 580px);
+  width: 52.8125rem;
   position: relative;
   height: 100%;
   justify-content: center;
@@ -931,7 +931,7 @@ img {
   max-width: 100%;
   margin-right: 2.8125rem; }
   .burger-slider__item:nth-child(3) .burger-content__img {
-    max-width: 110%;
+    max-width: 100%;
     margin-left: -6.6875rem; }
     @media screen and (max-width: 768px) {
       .burger-slider__item:nth-child(3) .burger-content__img {
