модальное окно отзывы

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -80,3 +80,9 @@ img{
 .no-scroll{
     overflow: hidden;
 }
+.modal{
+    background-color:rgba(47,50,52,.99);
+    widows: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
