--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,6 +26,7 @@ $phones: 480px;
 @import "../scss/delivery.scss";
 @import "../scss/burger-slider.scss";
 @import "../scss/sprite.scss";
+@import "../scss/reviews-modal.scss";
 
 
 
