--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,12 @@ img {
 .no-scroll {
   overflow: hidden; }
 
+.modal {
+  background-color: rgba(47, 50, 52, 0.99);
+  widows: 100%;
+  height: 100vh;
+  overflow: hidden; }
+
 .welcome {
   background: url("../image/backgrounds/welcome-background.png") center center no-repeat;
   background-size: cover;
@@ -150,7 +156,8 @@ img {
 
 .reviews {
   height: 100vh;
-  background: grey; }
+  background: grey;
+  position: relative; }
 
 .reviews__list {
   display: flex;
@@ -215,7 +222,8 @@ img {
 
 .reviews__more-link {
   background-color: #2f3234;
-  width: 6.875rem; }
+  width: 6.875rem;
+  cursor: pointer; }
   @media screen and (max-width: 768px) {
     .reviews__more-link {
       margin: 0 auto; } }
@@ -1160,5 +1168,55 @@ img {
   height: 90%;
   position: absolute;
   top: 0; }
+
+.reviews-modal {
+  position: absolute;
+  top: calc(100vh * 5);
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: none; }
+
+.reviews-modal__popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.reviews-modal__content {
+  color: black;
+  opacity: 1;
+  background: white;
+  border-radius: 5px;
+  padding: 30px 26px 0 26px; }
+
+.reviews-modal__close {
+  top: 5%;
+  right: 5%;
+  position: absolute;
+  cursor: pointer; }
+  .reviews-modal__close:before {
+    content: '';
+    width: 0.1875rem;
+    height: 0.9375rem;
+    background-color: #f9b43b;
+    position: absolute;
+    border-radius: 0.1875rem;
+    transform: rotate(-40deg);
+    top: 0.0625rem;
+    left: 0.5rem; }
+  .reviews-modal__close:after {
+    content: '';
+    width: 0.1875rem;
+    height: 0.9375rem;
+    background-color: #f9b43b;
+    position: absolute;
+    border-radius: 0.1875rem;
+    transform: rotate(40deg);
+    top: 0.0625rem;
+    left: 0.5rem; }
+
+.modal__close {
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
