--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,7 +27,7 @@ $phones: 480px;
 @import "../scss/burger-slider.scss";
 @import "../scss/sprite.scss";
 @import "../scss/reviews-modal.scss";
-
+@import "../scss/delivery-modal.scss";
 
 
 
