--- a/styles/style.css
+++ b/styles/style.css
@@ -838,13 +838,13 @@ img {
   top: 0;
   left: -624.9375rem; }
 
-.order__radio-fake {
+.order__radio-fake, .order__radio-fake-check {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
   background: #fff;
   position: relative; }
-  .order__radio-fake:after {
+  .order__radio-fake:after, .order__radio-fake-check:after {
     content: "";
     display: block;
     position: absolute;
@@ -866,11 +866,11 @@ img {
   color: #fff;
   margin-left: 0.625rem; }
 
-.order__radio_checkbox .order__radio-fake {
+.order__radio_checkbox .order__radio-fake-check {
   border-radius: 0rem; }
 .order__radio_checkbox .order__radio-elem + .order__radio-fake:after {
   background: transparent; }
-.order__radio_checkbox .order__radio-elem:checked + .order__radio-fake:after {
+.order__radio_checkbox .order__radio-elem:checked + .order__radio-fake-check:after {
   background: url("../icons/checked.png") no-repeat;
   background-size: contain;
   width: 0.6875rem;
@@ -1181,18 +1181,27 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  width: 460px;
+  height: 255px; }
+  @media screen and (max-width: 768px) {
+    .reviews-modal__popup {
+      width: 380px;
+      height: 200px; } }
+  @media screen and (max-width: 480px) {
+    .reviews-modal__popup {
+      width: 310px;
+      height: 155px; } }
 
 .reviews-modal__content {
   color: black;
   opacity: 1;
   background: white;
-  border-radius: 5px;
-  padding: 30px 26px 0 26px; }
+  border-radius: 5px; }
 
 .reviews-modal__close {
-  top: 5%;
-  right: 5%;
+  top: 8%;
+  right: 10%;
   position: absolute;
   cursor: pointer; }
   .reviews-modal__close:before {
@@ -1218,5 +1227,38 @@ img {
 
 .modal__close {
   display: none; }
+
+.delivery-modal {
+  position: absolute;
+  top: calc(100vh * 6);
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: none; }
+
+.delivery-modal__popup {
+  background: white;
+  color: black;
+  width: 12.5rem;
+  height: 6.5625rem;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute; }
+
+.delivery-modal__content {
+  text-align: center;
+  padding-top: 10%;
+  font-weight: 300; }
+
+.delivery-modal-close {
+  background: #e45028;
+  left: 50%;
+  top: 80%;
+  position: absolute;
+  transform: translate(-50%, -80%);
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
