--- a/scss/delivery-modal.scss
+++ b/scss/delivery-modal.scss
@@ -3,7 +3,7 @@
     top:calc(100vh * 6);
     left:0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: none;
 }
 .delivery-modal__popup{
