первый коммент на 5 неделю

--- a/scss/team.scss
+++ b/scss/team.scss
@@ -25,6 +25,13 @@
    //
     position: absolute;
     top: 22%;
+    @include tablets{
+        position: absolute;
+        top: 20%;
+    }
+    @include phones{
+        top: 2%;
+    }
 }
 //
 .team__list{
