--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,6 +28,7 @@ $phones: 480px;
 @import "../scss/sprite.scss";
 @import "../scss/reviews-modal.scss";
 @import "../scss/delivery-modal.scss";
+@import "../scss/onepage-slider.scss";
 
 
 
