правиильный путь для фона

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,6 +1,6 @@
 .menu{
     display: flex;
-    background:url('../images/menu-background.png') center center no-repeat;
+    background:url('images/menu-background.png') center center no-repeat;
     background-size: cover;
     position: relative;
     justify-content: flex-end;
