--- a/src/scss/our-work.scss
+++ b/src/scss/our-work.scss
@@ -1,5 +1,5 @@
 .our-work{
-    background-image: url('../images/our-work.jpg');
+    background-image: url('images/our-work.jpg');
     background-size: cover;
 }
 .our-work-container{
