--- a/src/scss/delivery.scss
+++ b/src/scss/delivery.scss
@@ -1,5 +1,5 @@
 .delivery{
-    background-image: url('../images/order-background.png');
+    background-image: url('images/order-background.png');
     background-size: cover;
 }
 .delivery__title{
