--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,7 +7,7 @@
     padding:0.6875rem 0rem;  
     display: flex;
     justify-content: space-between; 
-    background-image: url('../images/order-background.png');
+    background-image: url('images/order-background.png');
     background-size: cover; 
 }
 .contacts{
