--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -1,5 +1,5 @@
 .map{
-    background-image: url('../images/map-background.png');
+    background-image: url('images/map-background.png');
     background-position: center;
    position: relative;
 }
