--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -1,5 +1,5 @@
 .welcome{
-    background:url('../images/welcome-background.png') center center no-repeat;
+    background:url('images/welcome-background.png') center center no-repeat;
     background-size: cover;
     width:100%;
     height: 100vh;
