--- a/src/scss/team.scss
+++ b/src/scss/team.scss
@@ -1,5 +1,5 @@
 .team{
-    background-image: url('images/team-background.png');
+    background-image: url('images/team-background.jpg');
     position: relative;
 }
 .team__content{
