--- a/src/scss/we-best.scss
+++ b/src/scss/we-best.scss
@@ -1,5 +1,5 @@
 .we-best{
-    background:url('images/best-background.png') center center / cover no-repeat;
+    background:url('images/best-background.jpg') center center / cover no-repeat;
 }
 .we-best__list{
     display: flex;
