--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -1,5 +1,5 @@
 .welcome{
-    background:url('images/welcome-background.png') center center no-repeat;
+    background:url('images/welcome-background.jpg') center center no-repeat;
     background-size: cover;
     width:100%;
     height: 100vh;
@@ -70,7 +70,22 @@
     position: absolute;
     bottom:5%;
     transform: translate(-50%);
+    cursor: pointer;
     left:50%;
+    &:hover{
+        animation-name: move;
+        animation-duration: .7s;
+        animation-iteration-count: infinite;
+        animation-fill-mode: backwards;
+    }
+}
+@keyframes move {
+    from{
+        bottom: 5%
+    }
+    to{
+        bottom: 4%
+    }
 }
 
 
